<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FinpocketLogin">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="173dp"
            android:layout_height="173dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hash"
            android:src="@drawable/ic_finpocketlogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="31dp"
            android:src="@drawable/ic_vector"
            android:layout_gravity="center"
            android:contentDescription="@string/hash"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:textFontWeight="300"
            android:layout_marginTop="10dp"
            android:text="@string/enable_biometric"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="480dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="12sp"
            android:maxLength="11"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:inputType="phone"
            android:autofillHints="@string/hash"
            android:textColorHint="@color/hint"
            android:paddingBottom="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin_number"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="12sp"
            android:inputType="number"
            android:maxLength="4"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:paddingBottom="15dp"
            android:autofillHints="@string/hash"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:fontFamily="@font/gilroy_regular"
            android:textAlignment="center"
            android:textAllCaps="false" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pin"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/ClickHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:clickable="true"
            android:textSize="15sp"
            android:fontFamily="@font/gilroy_regular"
            android:onClick="phoneNumberActivity"
            android:textColor="@color/eastern_blue"
            android:layout_marginStart="5dp"
            android:focusable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="660dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="15sp"
            android:text="@string/not_you"
            android:textColor="@color/black"/>
        <TextView
            android:id="@id/ClickHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/click_here"
            android:clickable="true"
            android:textSize="15sp"
            android:onClick="numberActivity"
            android:textColor="@color/eastern_blue"
            android:layout_marginStart="5dp"
            android:focusable="true" />
    </LinearLayout>
  </RelativeLayout>