<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".PhoneNumberActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="173dp"
                android:layout_height="173dp"
                android:layout_gravity="center"
                android:contentDescription="@string/hash"
                android:src="@drawable/ic_finpocketlogo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="370dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="23dp"
                android:fontFamily="@font/cabin_variable_font"
                android:paddingBottom="15dp"
                android:textStyle="bold"
                android:text="@string/enter_your_mobile_number"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="23dp"
                android:paddingEnd="100dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/please_confirm_your_country_code_and_enter_you_phone_number"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="23dp"
                android:paddingEnd="23dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/hash"
                    android:src="@drawable/ic_pakistan_svgrepo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/_92"
                    android:textSize="12sp"
                    android:fontFamily="@font/gilroy_light"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_light"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:hint="@string/phone_number"
                    android:textSize="12sp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:background="@color/transparent"
                    android:autofillHints="@string/hash" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/black" />


            <Button
                android:id="@+id/Continue"
                android:onClick="otpVerification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/gilroy_regular"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/conitinue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</layout>