<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerificationActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="23dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/otp_verification"
            android:fontFamily="@font/gilroy_semibold"
            android:textColor="@color/black"
            android:textSize="23sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/enter_the_4_digit_code_sent_to_you_at"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/fake_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/_92334372982"
            android:fontFamily="@font/gilroy_regular"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="254dp"
        >

        <EditText
            android:id="@+id/Otp_1"
            android:hint="@string/hash"
            android:layout_width="60dp"
            android:autofillHints="@string/hash"
            android:maxLength="1"
            android:fontFamily="@font/gilroy_light"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:inputType="number"
            android:textColorHint="@color/transparent"
            android:textCursorDrawable="@color/black"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/Otp_2"
            android:layout_width="60dp"
            android:autofillHints="@string/hash"
            android:maxLength="1"
            android:fontFamily="@font/gilroy_light"
            android:hint="@string/hash"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:inputType="number"
            android:textColorHint="@color/transparent"
            android:textCursorDrawable="@color/black"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/Otp_3"
            android:layout_width="60dp"
            android:autofillHints="@string/hash"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_light"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:maxLength="1"
            android:hint="@string/hash"
            android:textColorHint="@color/transparent"
            android:textCursorDrawable="@color/black"
            android:inputType="number"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/Otp_4"
            android:layout_width="60dp"
            android:autofillHints="@string/hash"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/gilroy_light"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:maxLength="1"
            android:hint="@string/hash"
            android:textColorHint="@color/transparent"
            android:textCursorDrawable="@color/black"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:fontFamily="@font/gilroy_light"
        android:text="@string/resend_code_in_00_27"
        android:textColor="@color/black" />
</RelativeLayout>